# fast-reid

./: pyproject.toml
fastreid/: pyproject.toml
fastreid/data/: build.py
