[tool.poetry]
name = "fast-reid"
version = "1.3.0"
description = "SOTA Re-identification Methods and Toolbox"
authors = ["l1aoxingyu"]
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.9.0"
scipy = "^1.13.1"
pillow = "^10.3.0"
numpy = "1.26.4"
scikit-learn = "^1.5.0"
PyYaml = "^6.0.1"
yacs = "^0.1.8"
termcolor = "^2.4.0"
tabulate ="^0.9.0"
tensorboard = "^2.16.2"
opencv-python = "^4.10.0.84"
gdown = "^5.2.0"
faiss-cpu = "^1.8.0"
torch = "^1.13.1"
torchvision = "^0.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
